tests/front_end/input/variable_use_analysis/errors/builtin.wl
//E<9:12>: Function `unknown` not found
int main() {
    call_trace(); // Builtin.
    call_trace(); // Builtin.
    call_trace(); // Builtin.
    call_trace(); // Builtin.
    call_trace(); // Builtin.
    call_trace(); // Builtin.
    return unknown();
}
